# mc-server-management-core

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yaml
src/: docker_connection.rs  lib.rs  main.rs
src/instance/: build_instance.rs  create.rs  get_info.rs  instance.rs  instance_config.rs  mod.rs
src/instance/instance_config/: build_config.rs  engine.rs  mod.rs  players_config.rs
src/lib/: mod.rs  path_to_string.rs
src/lib/docker/: create_container.rs  mod.rs
src/utils/: mod.rs  msma_container_dir.rs  msma_dir.rs  msma_var_dir.rs  msmc_container_dir.rs  msmc_dirs.rs  msmc_var_dir.rs
src/utils/docker/: container.rs  container_builder.rs  create_container.rs  inspect_structs.rs  mod.rs
tests/: create_delete_instance.rs  create_instance.rs  instance.rs  player_config.rs
