[package]
name = "mc-server-management-core"
version = "0.1.0"
edition = "2021"
rustflags = ["-C", "warnings=off"]

[dependencies]
lazy_static = "1.4.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = { version = "1.0.107", features = [] }

[dev-dependencies]
uuid = {version = "1.4.1", features = ["v4", "fast-rng"]}
